2012-10-09  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/generic/_G_config.h (_G_off64_t): Remove.
	(_G_stat64): Likewise.
	* sysdeps/unix/sysv/linux/_G_config.h (_G_off64_t): Remove.
	(_G_stat64): Likewise.
	* libio/filedoalloc.c (_IO_file_doallocate): Use struct stat64
	instead of struct _G_stat64.
	* libio/fileops.c (mmap_remap_check): Likewise.
	(decide_maybe_mmap): Likewise.
	(_IO_new_file_seekoff): Likewise.
	(_IO_file_stat): Likewise.
	* libio/libio.h (_IO_off64_t): Define to __off64_t, not
	_G_off64_t.
	* libio/oldfileops.c (_IO_old_file_seekoff): Use struct stat64
	instead of struct _G_stat64.
	* libio/wfileops.c (_IO_wfile_seekoff): Likewise.

2012-10-08  Maxim Kuvyrkov  <maxim@codesourcery.com>

	[BZ #14602]
	* string/str-two-way.h (AVAILABLE1, AVAILABLE2, AVAILABLE1_USES_J):
	Replace with ...
	(CHECK_EOL): New macro.
	(two_way_short_needle): Check beginning of haystack for EOL.  Use
	CHECK_EOL.
	* string/strcasestr.c (AVAILABLE1, AVAILABLE2, AVAILABLE1_USES_J):
	Replace with CHECK_EOL.
	* string/strstr.c (AVAILABLE1, AVAILABLE2, AVAILABLE1_USES_J):
	Replace with CHECK_EOL.

2012-10-08  Joseph Myers  <joseph@codesourcery.com>

	* math/gen-libm-test.pl (parse_args): Handle isinf and isnan as
	type-generic.
	* math/libm-test.inc: Update comment listing what functions and
	macros are tested.
	(finite_test): New function.
	(isinf_test): Likewise.
	(isnan_test): Likewise.
	(fpclassify_test): Test subnormal input.
	(isfinite_test): Likewise.
	(isnormal_test): Likewise.
	(main): Call the new functions.

2012-10-08  Jonathan Nieder  <jrnieder@gmail.com>

	[BZ #14660]
	* Makerules (%.dynsym): Force C locale when running
	$(OBJDUMP) --dynamic-syms.

2012-10-08  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/unix/sysv/linux/powerpc/get_timebase_freq.c: Include
	<stdint.h>.

2012-10-06  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc64/multiarch/memcpy-niagara4.S: On 32-bit, clear